[package]
name = "myweb"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
async-trait = "0.1.80"
chrono = "0.4.38"
figment = "0.10.19"
handlebars = "5.1.2"
markdown = "1.0.0-alpha.17"
minify-html = "0.15.0"
rocket = "0.5.1"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = "0.7.4"
tokio = { version = "1.38.0", features = ["full"] }
ulid = "1.1.2"
