[package]
name = "myweb"
version = "0.1.0-pre2"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
async-trait = "0.1.81"
chrono = "0.4.38"
derive_more = "0.99.18"
figment = "0.10.19"
handlebars = "6.0.0"
markdown = "1.0.0-alpha.18"
minify-html = "0.15.0"
rocket = "0.5.1"
serde = {version =  "1.0.204", features = ["rc", "serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
toml = "0.8.15"
ulid = "1.1.3"

[profile.release]
strip = true
lto = true
